fixed jump in scrolling links

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ nav a:hover {
 
 .fixed {
 	position: fixed;
-	top: 120px;
+	top: 95px;
 }
 
 #sidebar ul li {
